test/testdata/functions/redefined_parameter_error.lox
fun f(x) {
    var x = 1; // error: x has already been declared
    _ = x; // suppress unused declaration error
}

_ = f; // suppress unused declaration error
